# OpsPilot

./: .env.example  .gitignore  Dockerfile.allinone  README.md  README_EN.md  dev.bat  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py  websocket.py
backend/app/api/v1/: ai.py  auth.py  deploy.py  logs.py  projects.py  system.py
backend/app/websocket/: manager.py
backend/scripts/: seed_admin.py
cli/: Dockerfile  pyproject.toml
cli/opspilot_cli/: __init__.py  main.py
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: ai.ts  auth.ts  deploy.ts  index.ts  project.ts  request.ts  system.ts  types.ts
frontend/src/components/: LogViewer.tsx  ProtectedRoute.tsx
frontend/src/hooks/: index.ts  useLoading.ts  useResponsive.ts  useWebSocket.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/stores/: authStore.ts  deployStore.ts  index.ts  logStore.ts  projectStore.ts  systemStore.ts
frontend/src/styles/: global.css
frontend/src/views/: Dashboard.tsx  Deploy.tsx  Login.tsx  ProjectDetail.tsx  ProjectList.tsx
frontend/src/views/ai/: AIAnalysis.tsx  AIConfig.tsx  AIHistory.tsx
nginx/: nginx-single.conf  nginx.conf
nginx/conf.d/: default.conf
scripts/: deploy.sh  dev.sh  healthcheck.sh  quick-deploy.sh  setup.sh  supervisord.conf
