[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opspilot-backend"
version = "0.1.0"
description = "OpsPilot backend API service"
requires-python = ">=3.11"
dependencies = [
    "opspilot-core",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
opspilot-api = "app.main:run"
